buildscript {
    ext.javaRepos = {
        mavenCentral()
        jcenter()
    }
}

plugins {
    id 'com.github.ben-manes.versions' version '0.28.0'
}


repositories javaRepos

apply plugin: 'java'

javadoc.failOnError = false

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

version = 1.0

apply plugin: 'maven-publish'

dependencies {
    testImplementation "org.junit.jupiter:junit-jupiter:$junitVersion"
    testImplementation "org.slf4j:slf4j-jdk14:$slf4jVersion"
    testImplementation "org.apache.lucene:lucene-test-framework:$luceneVersion"
    testImplementation "org.apache.solr:solr-test-framework:$luceneVersion"
    testRuntimeOnly(
            "org.junit.jupiter:junit-jupiter-engine:$junitVersion",
            "org.junit.vintage:junit-vintage-engine:$junitVersion"
    )

    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion"
    implementation "org.apache.solr:solr-core:$luceneVersion"
    implementation "org.slf4j:slf4j-api:$slf4jVersion"
    implementation "org.slf4j:slf4j-ext:$slf4jVersion"
    implementation "org.apache.lucene:lucene-core:$luceneVersion"
    implementation "org.apache.lucene:lucene-analyzers-common:$luceneVersion"
}


sourceSets.test {
    resources.srcDirs = ["src/test/resources"]
}


test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    systemProperty "test.solr.allowed.securerandom", "NativePRNG"
}
